# llm_application_evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  main.ipynb  pyproject.toml
application/: application.py  docling_parser.py  reranker.py  vector_store.py
data/: questions_groundtruth.json
